--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "lucide-react": "^0.454.0",
     "next": "15.1.0",
     "next-themes": "^0.4.4",
+    "open": "^10.1.0",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
