--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "next": "15.1.0",
     "next-themes": "^0.4.4",
     "open": "^10.1.0",
+    "openai": "^4.89.0",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
